# codex

codex-rs/: Cargo.toml
codex-rs/cli/src/: main.rs
codex-rs/console-cli/: Cargo.toml
codex-rs/console-cli/src/: cli_args.rs  lib.rs  onboarding.rs
codex-rs/console-persist/: Cargo.toml
codex-rs/console-persist/src/: checkpoint.rs  compaction.rs  export.rs  lib.rs  session.rs
codex-rs/console-plugin/: Cargo.toml
codex-rs/console-plugin/src/: capability.rs  hook.rs  lib.rs  lifecycle.rs  registry.rs
codex-rs/console-provider/: Cargo.toml
codex-rs/console-provider/src/: adapter.rs  anthropic.rs  cost.rs  error.rs  lib.rs  openai_chat.rs  registry.rs  retry.rs
codex-rs/console-runtime/: Cargo.toml
codex-rs/console-runtime/src/: guardrails.rs  lib.rs  loop_state.rs  modes.rs
codex-rs/console-security/: Cargo.toml
codex-rs/console-security/src/: audit.rs  budget.rs  lib.rs  permission.rs  scope.rs
codex-rs/console-team/: Cargo.toml
codex-rs/console-team/src/: assignment.rs  delegation.rs  error.rs  interaction.rs  lib.rs  state.rs  tool_specs.rs  types.rs
codex-rs/console-tui/: Cargo.toml
codex-rs/console-tui/src/: badge.rs  density.rs  keymap.rs  lib.rs  statusline.rs  task_view.rs  theme.rs  ux_parity.rs
codex-rs/core/: Cargo.toml  config.schema.json
codex-rs/core/src/: codex.rs  features.rs  lib.rs
codex-rs/core/src/state/: mod.rs  service.rs
codex-rs/core/src/team/: handler.rs  mod.rs
codex-rs/core/src/tools/: router.rs  spec.rs
codex-rs/core/src/tools/handlers/: collab.rs  mod.rs
codex-rs/tui/src/: cli.rs  wrapping.rs
codex-rs/tui/src/bottom_pane/: chat_composer.rs
