[package]
name = "console-plugin"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Hooks engine, plugin lifecycle, capability negotiation, and extension registry for Console v2"

[lib]
doctest = false
name = "console_plugin"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
