[package]
name = "console-provider"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Provider abstraction, model registry, and cost telemetry for Console v2"

[lib]
doctest = false
name = "console_provider"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
